[project]
name = "chrome-devtoolsactiveport-mcp"
version = "0.1.0"
description = "MCP server that attaches to a local Chrome-family browser via DevToolsActivePort, with a broker-first workflow for environments that prompt on each new CDP connection."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mcp>=1.2.0",
  "websockets>=12.0",
]

[project.scripts]
chrome-devtoolsactiveport-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "server.py",
  "find_devtools_active_port.py",
  "resolve_devtools_active_port.py",
  "cdp_connection_broker.py",
]

[tool.hatch.build.targets.wheel.sources]
"server.py" = "server.py"
